--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -43,7 +43,12 @@
 
 <button></button>
 <script>
-
+function clicked(e){
+  console.log(this.classList.value);
+  e.stopPropagation();
+}
+const divs = document.querySelectorAll('div');
+divs.forEach(div => div.addEventListener('click',clicked,{once:true}));
 </script>
 </body>
 </html>
